Fixed logo display width on mobile

--- a/styles.css
+++ b/styles.css
@@ -388,12 +388,15 @@ uppercase {
         position: fixed; 
     }
 
-    .logo-container svg {
-        position: relative; 
-        width: 50vw;
-
+    .logo-container svg{
+        margin-top: 0;
     }
 
+
+    .logo-container svg {
+        position: relative; 
+        width: 25vw;
+    }
 
     .tablet {
         display: none;
@@ -416,8 +419,6 @@ uppercase {
         margin-bottom: 8pt;
     }
 
-    .logo-container svg{
-        margin-top: 0;
-    }
+
 
     }
